apps/staging/lidarr/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: lidarr
  annotations:
    cert-manager.io/cluster-issuer: vault-issuer
    cert-manager.io/common-name: lidarr.dev.myrobertson.net
    cert-manager.io/private-key-algorithm: "ECDSA"
spec:
  gatewayClassName: istio
  listeners:
  - name: lidarr
    hostname: lidarr.dev.myrobertson.net
    port: 443
    protocol: HTTPS
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
      - name: lidarr-cert
  infrastructure:
    labels:
      istio-injection: enabled
    annotations:
      external-dns.alpha.kubernetes.io/hostname: lidarr.dev.myrobertson.net
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: lidarr
spec:
  parentRefs:
  - name: lidarr
  hostnames: ["lidarr.dev.myrobertson.net"]
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: lidarr
      port: 8686
