apps/staging/lidarr/httpRoute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: lidarr
  namespace: default
spec:
  parentRefs:
  - name: myrobertson-com-gateway
    namespace: default
  hostnames: ["lidarr.staging.myrobertson.net"]
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: lidarr
      port: 8686
