apps/staging/lidarr/auth-policy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: auth-policy-lidarr
  namespace: default
spec:
  targetRefs:
  - kind: Gateway
    group: gateway.networking.k8s.io
    name: myrobertson-com-gateway
  action: 'CUSTOM'
  provider:
    name:  'authelia'
  rules:
    - to:
        - operation:
            notPaths: ["/api/*"]
            hosts:
              - 'lidarr.staging.myrobertson.net'
